--- a/Action_Potentials_Website_Self/blog-coding.html
+++ b/Action_Potentials_Website_Self/blog-coding.html
@@ -180,7 +180,7 @@
                             <div class="text">
                                 <p>Under this section, you may find blogs related to computer science and coding. Coding is a very broad topic that includes various aspects of computer science and its applications. Under this section, most contents will
                                     be principle related instead of tutorials. If you are interested in learning to code, check out <a href="services-resources.html">our learning resources page</a> for more information. Check out our blogs and start diving
-                                    into the world of virtual researches.
+                                    into the world of computer science.
                                 </p>
                             </div>
                         </div>
