--- a/Action_Potentials_Website_Self/blog-ideas.html
+++ b/Action_Potentials_Website_Self/blog-ideas.html
@@ -167,6 +167,38 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>STEM-Related Ideas Blogs</h2>
+                            <div class="bold-text">Take action and reach your potentials!</div>
+                            <div class="text">
+                                <p>Under this section, you may find blogs that are STEM-related but does not fit into any umbrella term. This section consists topics ranging from time management to tips and tricks to self study. Most of the contents under
+                                    this category are not very academically focused, rather it supports the foundation which you may build your knowledge bank upon. Check out our blogs and start diving into the world of STEM.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/omni.jpg" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
