--- a/Action_Potentials_Website_Self/blog-projects.html
+++ b/Action_Potentials_Website_Self/blog-projects.html
@@ -167,6 +167,39 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>Research Project Summary</h2>
+                            <div class="bold-text">Take action and reach your potentials!</div>
+                            <div class="text">
+                                <p>Under this section, you may find summaries of interesting researches that ranges from health science to theoretical fluid dynamics. These blogs are extracts of highly academic research papers, therefore they will require
+                                    advanced reading comprehension skills and further researches to fully synthesize the information contained in these articles. In addition, these blogs will include reference lists to help you dive into specific topics
+                                    that are adjacent to the research. Checkout these blogs and start learning the cutting edge researches conducted by researchers world wide.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/3D_Printer_v2_1.jpg" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
