--- a/Action_Potentials_Website_Self/blog-robotics.html
+++ b/Action_Potentials_Website_Self/blog-robotics.html
@@ -167,6 +167,53 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>Robotics Blogs</h2>
+                            <div class="bold-text">Take action and reach your potentials!</div>
+                            <div class="text">
+                                <p>Have you met Joe-E yet? Both our founders are a part of a First Tech Challenge team - #14316 BFFs - Entradox. Joe-E is the robot which the team competed with during the 2019-2020 Skystone season. The image of Joe-E shown
+                                    here is actually a variation from the competition robot; instead, it was taken just before his movie debut. Under this section, you may find updates on the BFFs in competition, as well as blogs regarding the cutting
+                                    edge technologies in robotics and mechatronics. Check them out and start diving into the world of robots.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/Joe-E.jpg" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
+        <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+            <div class="auto-container ">
+                <h2>Catagories</h2>
+                <br>
+                <a href="blog-CAD.html" class="theme-btn btn-style-two "><span class="txt ">Computer-Aided Design</span></a>
+                <a href="blog-coding.html" class="theme-btn btn-style-two "><span class="txt ">Coding</span></a>
+                <a href="blog-ideas.html" class="theme-btn btn-style-two "><span class="txt ">Ideas</span></a>
+                <a href="blog-projects.html" class="theme-btn btn-style-two "><span class="txt ">Research Projects</span></a>
+                <a href="blog-robotics.html" class="theme-btn btn-style-two "><span class="txt ">Robotics</span></a>
+                <a href="blog-stories.html" class="theme-btn btn-style-two "><span class="txt ">STEM Stories</span></a>
+            </div>
+        </section>
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
