--- a/Action_Potentials_Website_Self/blog-stories.html
+++ b/Action_Potentials_Website_Self/blog-stories.html
@@ -167,6 +167,52 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>STEM-related stories</h2>
+                            <div class="bold-text">Take action and reach your potentials!</div>
+                            <div class="text">
+                                <p>Under this section, you may find interesting background stories (STEM-related of course) of many interesting people. Whether it is a robot that flipped upside down during a competition, or almost blowing up an entire garage,
+                                    these stories have either inspired the person to pursue a STEM career or taught them a valuable lesson - in the case of the two examples, the latter. Checkout these blogs and discover the stories of these people.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/gripper.JPG" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
+        <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+            <div class="auto-container ">
+                <h2>Catagories</h2>
+                <br>
+                <a href="blog-CAD.html" class="theme-btn btn-style-two "><span class="txt ">Computer-Aided Design</span></a>
+                <a href="blog-coding.html" class="theme-btn btn-style-two "><span class="txt ">Coding</span></a>
+                <a href="blog-ideas.html" class="theme-btn btn-style-two "><span class="txt ">Ideas</span></a>
+                <a href="blog-projects.html" class="theme-btn btn-style-two "><span class="txt ">Research Projects</span></a>
+                <a href="blog-robotics.html" class="theme-btn btn-style-two "><span class="txt ">Robotics</span></a>
+                <a href="blog-stories.html" class="theme-btn btn-style-two "><span class="txt ">STEM Stories</span></a>
+            </div>
+        </section>
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
