--- a/Action_Potentials_Website_Self/blog-ideas.html
+++ b/Action_Potentials_Website_Self/blog-ideas.html
@@ -199,6 +199,20 @@
         </section>
         <!-- End Story Section -->
 
+        <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+            <div class="auto-container ">
+                <h2>Catagories</h2>
+                <br>
+                <a href="blog-CAD.html" class="theme-btn btn-style-two "><span class="txt ">Computer-Aided Design</span></a>
+                <a href="blog-coding.html" class="theme-btn btn-style-two "><span class="txt ">Coding</span></a>
+                <a href="blog-ideas.html" class="theme-btn btn-style-two "><span class="txt ">Ideas</span></a>
+                <a href="blog-projects.html" class="theme-btn btn-style-two "><span class="txt ">Research Projects</span></a>
+                <a href="blog-robotics.html" class="theme-btn btn-style-two "><span class="txt ">Robotics</span></a>
+                <a href="blog-stories.html" class="theme-btn btn-style-two "><span class="txt ">STEM Stories</span></a>
+            </div>
+        </section>
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
