--- a/Action_Potentials_Website_Self/projects-other.html
+++ b/Action_Potentials_Website_Self/projects-other.html
@@ -190,16 +190,17 @@
                     <div class="filter-list row clearfix">
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="images/rim.JPG" alt="">
+                                    <img src="images/diagram 2.jpg" alt="">
                                     <!--Overlay Box-->
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="content">
-                                                <h3><a href="blog_how_to_make_anything.html">How to Make Anything?</a></h3>
-                                                <a href="blog_how_to_make_anything.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                                <h3><a href="blog_poseidon.html">PosEIDOn - Targeting Cancer with Positron and Electron Irradiation Scattering Onset
+                        </a></h3>
+                                                <a href="blog_poseidon.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -208,7 +209,7 @@
                         </div>
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all project col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
                                     <img src="images/prion.JPG" alt="">
@@ -226,23 +227,22 @@
                         </div>
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="images/time-management.jpg" alt="">
+                                    <img src="images/foil.jpg" alt="">
                                     <!--Overlay Box-->
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="content">
-                                                <h3><a href="blog_how_to_manage_your_time.html">How to Manage Your Time? (And Learn STEM)</a></h3>
-                                                <a href="blog_how_to_manage_your_time.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                                <h3><a href="blog_foil_data_augmentation.html">How can Generative Design, Topography Optimization, and Data Augmentation be Used to Maximize the Aerodynamic Efficiency of Air Foil?</a></h3>
+                                                <a href="blog_foil_data_augmentation.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
                                     </div>
                                 </figure>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
