--- a/Action_Potentials_Website_Self/projects_gallery_items_scratch.html
+++ b/Action_Potentials_Website_Self/projects_gallery_items_scratch.html
@@ -2,13 +2,13 @@
 <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
     <div class="inner-box">
         <figure class="image-box">
-            <img src="images/.JPG" alt="">
+            <img src="images/diagram 2.jpg" alt="">
             <!--Overlay Box-->
             <div class="overlay-box">
                 <div class="overlay-inner">
                     <div class="content">
                         <h3><a href="blog_poseidon.html">PosEIDOn - Targeting Cancer with Positron and Electron Irradiation Scattering Onset
-                        </a></h3>
+</a></h3>
                         <a href="blog_poseidon.html" class="link"><span class="icon flaticon-unlink"></span></a>
                     </div>
                 </div>
@@ -36,16 +36,16 @@
 </div>
 
 <!-- Gallery Item -->
-<div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
+<div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
     <div class="inner-box">
         <figure class="image-box">
-            <img src="images/time-management.jpg" alt="">
+            <img src="images/foil.jpg" alt="">
             <!--Overlay Box-->
             <div class="overlay-box">
                 <div class="overlay-inner">
                     <div class="content">
-                        <h3><a href="blog_how_to_manage_your_time.html">How to Manage Your Time? (And Learn STEM)</a></h3>
-                        <a href="blog_how_to_manage_your_time.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                        <h3><a href="blog_foil_data_augmentation.html">How can Generative Design, Topography Optimization, and Data Augmentation be Used to Maximize the Aerodynamic Efficiency of Air Foil?</a></h3>
+                        <a href="blog_foil_data_augmentation.html" class="link"><span class="icon flaticon-unlink"></span></a>
                     </div>
                 </div>
             </div>
