--- a/Action_Potentials_Website_Self/projects.html
+++ b/Action_Potentials_Website_Self/projects.html
@@ -198,6 +198,18 @@
         </section>
         <!-- End Story Section -->
 
+        <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+            <div class="auto-container ">
+                <h2>Catagories</h2>
+                <br>
+                <a href="projects-research.html" class="theme-btn btn-style-two "><span class="txt ">Research Projects</span></a>
+                <a href="projects-studies.html" class="theme-btn btn-style-two "><span class="txt ">Studies</span></a>
+                <a href="projects-creative.html" class="theme-btn btn-style-two "><span class="txt ">Creative Projects</span></a>
+                <a href="projects-other.html" class="theme-btn btn-style-two "><span class="txt ">Other Projects</span></a>
+            </div>
+        </section>
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
@@ -221,16 +233,17 @@
                     <div class="filter-list row clearfix">
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="images/rim.JPG" alt="">
+                                    <img src="images/diagram 2.jpg" alt="">
                                     <!--Overlay Box-->
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="content">
-                                                <h3><a href="blog_how_to_make_anything.html">How to Make Anything?</a></h3>
-                                                <a href="blog_how_to_make_anything.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                                <h3><a href="blog_poseidon.html">PosEIDOn - Targeting Cancer with Positron and Electron Irradiation Scattering Onset
+</a></h3>
+                                                <a href="blog_poseidon.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -239,7 +252,7 @@
                         </div>
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all project col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
                                     <img src="images/prion.JPG" alt="">
@@ -257,16 +270,16 @@
                         </div>
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="images/time-management.jpg" alt="">
+                                    <img src="images/foil.jpg" alt="">
                                     <!--Overlay Box-->
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="content">
-                                                <h3><a href="blog_how_to_manage_your_time.html">How to Manage Your Time? (And Learn STEM)</a></h3>
-                                                <a href="blog_how_to_manage_your_time.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                                <h3><a href="blog_foil_data_augmentation.html">How can Generative Design, Topography Optimization, and Data Augmentation be Used to Maximize the Aerodynamic Efficiency of Air Foil?</a></h3>
+                                                <a href="blog_foil_data_augmentation.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
                                     </div>
