--- a/Action_Potentials_Website_Self/services-publishing.html
+++ b/Action_Potentials_Website_Self/services-publishing.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Published Projects | Action Potentials - A Student-Led STEM Environment</title>
+    <title>Publishing | Action Potentials - A Student-Led STEM Environment</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -157,14 +157,151 @@
         <!--Page Title-->
         <section class="page-title" style="background-image:url(images/1.jpg)">
             <div class="auto-container">
-                <h2>Published Projects</h2>
+                <h2>Publishing</h2>
                 <ul class="page-breadcrumb">
-                    <li><a href="index.html">Home</a></li>
-                    <li>Published Projects</li>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="service.html">Services</a></li>
+                    <li>Publishing</li>
                 </ul>
             </div>
         </section>
         <!--End Page Title-->
+
+        <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+            <div class="auto-container ">
+                <h2>Submission Portal</h2>
+                <div class="text">Interested in submitting your project to publish online? Click the following button to be redirected to our submission portal.</div>
+                <a href="https://forms.gle/5UEJqqBGzmE6bfDa8" class="theme-btn btn-style-two "><span class="txt ">Redirect</span></a>
+            </div>
+        </section>
+
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>Our Projects</h2>
+                            <div class="text">
+                                <p>Here are the projects published or created by Action Potentials. Here, we offer to publish all qualified projects online for high school students. Research often seem unaccessible for high school students because it require
+                                    a lot of knowledge and work. After completing a research project, students also often encounter barriers to showcase them. At Action Potentials, we offer to help making high school research more accessible by publishing
+                                    them online and allow open-access for all.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/compat drill.JPG" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
+        <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+            <div class="auto-container ">
+                <h2>Catagories</h2>
+                <br>
+                <a href="projects-research.html" class="theme-btn btn-style-two "><span class="txt ">Research Projects</span></a>
+                <a href="projects-studies.html" class="theme-btn btn-style-two "><span class="txt ">Studies</span></a>
+                <a href="projects-creative.html" class="theme-btn btn-style-two "><span class="txt ">Creative Projects</span></a>
+                <a href="projects-other.html" class="theme-btn btn-style-two "><span class="txt ">Other Projects</span></a>
+            </div>
+        </section>
+
+        <!-- Portfolio Page Section -->
+        <section class="portfolio-page-section">
+            <div class="auto-container">
+                <!--MixitUp Galery-->
+                <div class="mixitup-gallery">
+
+                    <!--Filter-->
+                    <div class="filters clearfix">
+                        <h3 class="text-portfolio"><i><b>More contents are coming soon!</b></i></h3>
+                        <br>
+                        <ul class="filter-tabs filter-btns text-center clearfix">
+                            <li class="active filter" data-role="button" data-filter="all">All Works</li>
+                            <li class="filter" data-role="button" data-filter=".research">Research Projects</li>
+                            <li class="filter" data-role="button" data-filter=".studies">Studies</li>
+                            <li class="filter" data-role="button" data-filter=".creative">Creative Projects</li>
+                            <li class="filter" data-role="button" data-filter=".other">Other Projects</li>
+                            <li class="filter" data-role="button" data-filter=".ongoing">Ongoing Projects by Our Founders</li>
+
+                    </div>
+
+                    <div class="filter-list row clearfix">
+
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/diagram 2.jpg" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="blog_poseidon.html">PosEIDOn - Targeting Cancer with Positron and Electron Irradiation Scattering Onset
+</a></h3>
+                                                <a href="blog_poseidon.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/prion.JPG" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="blog_prion_disease.html">Protein Folding and Prion Diseases</a></h3>
+                                                <a href="blog_prion_disease.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/foil.jpg" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="blog_foil_data_augmentation.html">How can Generative Design, Topography Optimization, and Data Augmentation be Used to Maximize the Aerodynamic Efficiency of Air Foil?</a></h3>
+                                                <a href="blog_foil_data_augmentation.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
 
         <!--Main Footer-->
         <footer class="main-footer">
@@ -237,7 +374,7 @@
                                         <div class="text">Let us know what you think</div>
                                         <!-- Newsletter Form -->
                                         <div class="newsletter-form">
-                                            <form method="post" action="templateshub.net">
+                                            <form method="post" action="#">
                                                 <div class="form-group">
                                                     <input type="email" name="email" value="" placeholder="Enter your email address">
                                                     <div class="form-submission-button">
@@ -314,18 +451,21 @@
             </div>
         </div>
 
+
         <!--Scroll to top-->
         <script src="js/jquery.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/jquery-ui.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery.fancybox.js"></script>
-        <script src="js/isotope.js"></script>
         <script src="js/owl.js"></script>
         <script src="js/wow.js"></script>
+        <script src="js/mixitup.js"></script>
         <script src="js/appear.js"></script>
         <script src="js/scrollbar.js"></script>
         <script src="js/script.js"></script>
 </body>
+
+<!-- stella-orre/projects-classic.html  30 Nov 2019 03:51:15 GMT -->
 
 </html>
