--- a/Action_Potentials_Website_Self/projects-studies.html
+++ b/Action_Potentials_Website_Self/projects-studies.html
@@ -167,6 +167,39 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>Studies</h2>
+                            <div class="bold-text">Take action and reach your potentials!</div>
+                            <div class="text">
+                                <p>Under this section, you may find researches conducted by students regarding detailed survey and analysis regarding any subject. These studies provide insightful findings regarding an issue that involves mass number of population.
+                                    Checkout these studies and start exploring new avenues through the power of data science and statistics.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/intake.JPG" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
@@ -199,7 +232,7 @@
                                         <div class="overlay-inner">
                                             <div class="content">
                                                 <h3><a href="blog_poseidon.html">PosEIDOn - Targeting Cancer with Positron and Electron Irradiation Scattering Onset
-</a></h3>
+                                                </a></h3>
                                                 <a href="blog_poseidon.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
