--- a/Action_Potentials_Website_Self/services-publishing.html
+++ b/Action_Potentials_Website_Self/services-publishing.html
@@ -167,8 +167,38 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>Publish on our Website</h2>
+                            <div class="text">
+                                <p>At Action Potentials, we encourage high students like us to pursue research in their desired fields without the barriers of educational qualification. Therefore, we offer to publish your research into
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/compat drill.JPG" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
         <!-- Call To Action Section -->
-        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+        <section class="call-to-action-section" style="background-image: url(images/crank.JPG) ">
             <div class="auto-container ">
                 <h2>Submission Portal</h2>
                 <div class="text">Interested in submitting your project to publish online? Click the following button to be redirected to our submission portal.</div>
